remove vendor form tabs

--- a/templates/register.html
+++ b/templates/register.html
@@ -16,8 +16,7 @@
 
     <div id="form-container" class="form-container">
 
-      <button type="button" onclick="showNonVendorForm()">NON VENDOR</button>
-      <button type="button" onclick="showVendorForm()">VENDOR</button>
+      <h4>NON VENDOR</h4>
 
       <form id="non-vendor-form">
 
@@ -31,6 +30,8 @@
         <button type="button" class="submit" onclick="addNonVendor()">REGISTER</button>
 
       </form>
+
+      <h4>VENDOR</h4>
 
       <form id="vendor-form">
 
