fix node connection

--- a/android_nfc_read_write/app/src/main/res/layout/activity_main.xml
+++ b/android_nfc_read_write/app/src/main/res/layout/activity_main.xml
@@ -47,4 +47,11 @@
         android:layout_height="87dp"
         android:text="Get Balance"
         android:onClick="getBalance"/>
+
+    <Button
+        android:id="@+id/btnFile"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:onClick="onFile"
+        android:text="Choose File" />
 </LinearLayout>
