--- a/templates/overview.html
+++ b/templates/overview.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="../static/js/overview.js"></script>
+    <link href="../static/css/style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -15,13 +16,13 @@
       <table>
 
         <thead>
-          <th>
-            <td>SENDER NAME</td>
-            <td>SENDER ID</td>
-            <td>RECIPIENT NAME</td>
-            <td>RECIPIENT ID</td>
-            <td>AMOUNT</td>
-          </th>
+          <tr>
+            <th>SENDER NAME</th>
+            <th>SENDER ID</th>
+            <th>RECIPIENT NAME</th>
+            <th>RECIPIENT ID</th>
+            <th>AMOUNT</th>
+          </tr>
         </thead>
       
         <tbody>
@@ -36,10 +37,10 @@
         
             <tr>
         
-              <td>{{senders[ns.index]}}</td>
+              <td>{{senders[ns.index].name}}</td>
               <td>{{transaction.sender[:8]}}</td>
-              <td>{{recipients[ns.index]}}</td>
-              <td>{{transaction.recipient[:8]}}</td>
+              <td>{{recipients[ns.index].name}}</td>
+              <td>{{transaction.address[:8]}}</td>
               <td>{{transaction.amount}}</td>
         
             </tr>
