add buttons for finalize, start/stop node

--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -13,13 +13,13 @@
   <section id="container">
 
     <div class="sidebar">
-
-      <br/><br/>
-      status: Running/Stopped
-      <br/><br/>
-      <a href="#">REGISTRATION</a>
-      <a href="#">TRANSACTIONS</a>
-
+      <div>
+        <button id="toggle-node" type="button">START/STOP</button>
+      </div>
+      <div class="ph">
+        <a href="#">REGISTRATION</a>
+        <a href="#">TRANSACTIONS</a>
+      </div>
     </div>
 
     <div class="main">
