--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,14 +21,39 @@
     background: #333;
     border: 1px solid #2b2b2b;
     text-decoration: none;
-    width: 100%;
+    width: 99%;
     height: 10vh;
     line-height: 10vh;
 }
 
 .sidebar a:hover {
+  text-decoration: underline;  
+}
+
+.sidebar a:hover, .sidebar button:hover {
     color: #aaa;
     background: #3a3a40;
+}
+
+.sidebar button {
+  display: block;
+  color: #eee;
+  background: #333;
+  border: 1px solid #2b2b2b;
+  text-decoration: none;
+  width: 100%;
+  height: 10vh;
+  line-height: 10vh;
+}
+
+.sidebar .ph {
+  position: relative;
+  top: 40%;
+  transform: translateY(-50%);
+}
+
+button:hover {
+  cursor:pointer;
 }
 
 .main {
