--- a/templates/register.html
+++ b/templates/register.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
-
 <html lang="en-us">
-
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="../static/css/style.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
 
   <section id="container">
 
     <div class="sidebar">
-
-      <br/><br/>
-      status: Running/Stopped
-      <br/><br/>
-      <a href="#">REGISTRATION</a>
-      <a href="#">TRANSACTIONS</a>
-
+      <div>
+        <button id="finalize" type="button">CLOSE REGISTRATION</button>
+      </div>
+      <div class="ph">
+        <a href="#">REGISTRATION</a>
+        <a href="#">TRANSACTIONS</a>
+      </div>
     </div>
 
     <div class="main">
@@ -46,5 +43,4 @@
   </section>
 
 </body>
-
 </html>
