--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Transactions</title>
   <link href="../static/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -17,7 +18,7 @@
         <button id="toggle-node" type="button">START/STOP</button>
       </div>
       <div class="ph">
-        <a href="#">REGISTRATION</a>
+        <a href="/">REGISTRATION</a>
         <a href="#">TRANSACTIONS</a>
       </div>
     </div>
@@ -33,10 +34,10 @@
             <th scope="col">timestamp</th>
           </tr>
           <tr>
-            <td align="center" style="width: 30%">name (transaction.sender[:8])</td>
-            <td align="center" style="width: 30%">name (transaction.sender[:8])</td>
-            <td align="center" style="width: 15%">transaction.amount</td>
-            <td align="right" style="width: 25%">transaction.timestamp</td>
+            <td style="width: 30%; text-align: center">name (transaction.sender[:8])</td>
+            <td style="width: 30%; text-align: center">name (transaction.sender[:8])</td>
+            <td style="width: 15%; text-align: center">transaction.amount</td>
+            <td style="width: 25%; text-align: center">transaction.timestamp</td>
           </tr>
         </table>
         <br/><br/><br/>pending<br/><br/>
@@ -48,10 +49,10 @@
               <th scope="col">timestamp</th>
             </tr>
             <tr>
-                <td align="center" style="width: 30%">name (transaction.sender[:8])</td>
-                <td align="center" style="width: 30%">name (transaction.sender[:8])</td>
-                <td align="center" style="width: 15%">transaction.amount</td>
-                <td align="right" style="width: 25%">transaction.timestamp</td>
+                <td style="width: 30%; text-align: center">name (transaction.sender[:8])</td>
+                <td style="width: 30%; text-align: center">name (transaction.sender[:8])</td>
+                <td style="width: 15%; text-align: center">transaction.amount</td>
+                <td style="width: 25%; text-align: center">transaction.timestamp</td>
             </tr>
           </table>
 
