write method for creating blockchain

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -13,7 +13,7 @@
 
     <div class="sidebar">
       <div>
-        <button id="finalize" type="button">CLOSE REGISTRATION</button>
+        <button id="finalize" type="button" onclick="finalize()">CLOSE REGISTRATION</button>
       </div>
       <div class="ph">
         <a href="#">REGISTRATION</a>
